--- a/src/css/sections/header.less
+++ b/src/css/sections/header.less
@@ -29,7 +29,7 @@
     -o-transform: scale(1.08);
 }
 
-.top-menu {
+.topMenu {
     padding: 0 20px;
 
     &__list{
@@ -66,12 +66,12 @@
     }
 }
 
-.top-menu__item:hover {
+.topMenu__item:hover {
     background: #0b4d91;
 }
 
-.top-menu__item:hover+.top-menu__item--before:before,
-.top-menu__item:hover::before {
+.topMenu__item:hover+.topMenu__item--before:before,
+.topMenu__item:hover::before {
     opacity: 0;
 }
 
