--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -86,13 +86,6 @@ a {
 
 
 @import "sections/header.less";
-@import "sections/offer.less";
-/*
-@import "sections/present.less";
-@import "sections/prop.less";
-@import "sections/discover.less";
-@import "sections/adv.less";
-@import "sections/blog.less";
-@import "sections/stats.less";
-@import "sections/packages.less";
-*/
+@import "sections/main.less";
+@import "sections/win.less";
+@import "sections/prize.less";
