--- a/src/css/sections/main.less
+++ b/src/css/sections/main.less
@@ -40,7 +40,7 @@
     &__cashback {
         font-size: 255px;
         font-weight: bold;
-        line-height: 176px;
+        line-height: 175px;
         letter-spacing: -12px;
         text-transform: uppercase;
     }
@@ -91,11 +91,10 @@
     color: @coor_blue;
 }
 
-.prizeMenu__item:hover {
+.prizeMenu__item--active {
     background: @color_red;
-    transition: all 0.5s ease;
 }
 
-.prizeMenu__item:hover .prizeMenu__link {
+.prizeMenu__item--active .prizeMenu__link {
     color: @color_white;
 }
