--- a/src/css/sections/footer.less
+++ b/src/css/sections/footer.less
@@ -1,5 +1,5 @@
 .footer {
-    background: @coor_blue;
+    background: #0d54a6;
     color: @color_white;
     font-size: 18px;
     font-weight: normal;
