--- a/src/css/sections/win.less
+++ b/src/css/sections/win.less
@@ -1,6 +1,5 @@
 .win {
-    background: url('../img/bg-blue.jpg') no-repeat center top;
-    background-size: cover;
+    &:extend(.section-bg);
     padding-top: @section_padding;
     padding-bottom: @section_padding;
 }
