--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -129,3 +129,4 @@ a {
 @import "sections/footer.less";
 @import "sections/winners.less";
 @import "sections/feedback.less";
+@import "sections/entrance.less";
