--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -148,4 +148,5 @@ a {
 @import "sections/feedback.less";
 @import "sections/entrance.less";
 @import "sections/registration.less";
+@import "sections/lk.less";
 @import "sections/modal.less";
