--- a/src/css/sections/lk.less
+++ b/src/css/sections/lk.less
@@ -5,7 +5,7 @@
     &__link {
         width: 518px;
         &:extend(.button);
-        margin-bottom: 90px;
+        margin-bottom: 9%;
         border: 2px solid @color_yellow;
 
         &:hover {
@@ -16,7 +16,7 @@
 }
 
 .offer-lk .offer__subtitle {
-    margin-bottom: 135px;
+    margin-bottom: 12%;
 }
 
 .lk {
