--- a/src/css/sections/main.less
+++ b/src/css/sections/main.less
@@ -8,7 +8,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
-        padding-top: 45px;
+        padding-top: 4.3%;
     }
 
     &__medal {
@@ -19,7 +19,7 @@
 
     &__subtitle {
         font-size: 18px;
-        margin-bottom: 50px;
+        margin-bottom: 5%;
         & span {
             text-transform: uppercase;
         }
@@ -29,7 +29,7 @@
         width: 445px;
         font-size: 42px;
         font-weight: bold;
-        margin-bottom: 50px;
+        margin-bottom: 4%;
     }
 
     &__text {
