--- a/src/css/sections/footer.less
+++ b/src/css/sections/footer.less
@@ -5,16 +5,21 @@
     font-weight: normal;
     padding-top: 55px;
     padding-bottom: 60px;
+    .xs(font-size, 13px);
 
     &__box {
         display: flex;
         align-items: center;
         justify-content: space-around;
+        .md-block({
+            flex-direction: column;
+        });
     }
 }
 
 .hochland {
     display: flex;
+    .md(margin-bottom, 30px);
 
     &__year {
         padding: 0 14px;
@@ -25,6 +30,7 @@
 
 .social {
     display: flex;
+    .md(margin-bottom, 30px);
 
     &__item {
         width: 33px;
@@ -50,5 +56,6 @@
         width: 33px;
         height: 33px;
         margin-right: 40px;
+        .md(display, none);
     }
 }
