--- a/src/css/sections/header.less
+++ b/src/css/sections/header.less
@@ -6,6 +6,11 @@
     z-index: 3;
 }
 
+.header__content {
+    position: relative;
+    min-height: 100px;
+}
+
 .logo {
     width: 120px;
     height: 80px;
@@ -31,6 +36,7 @@
 
 .topMenu {
     padding: 0 20px;
+    .sm(display, none);
 
     &__list{
         display: flex;
@@ -77,17 +83,53 @@
 
 .humburger {
     display: none;
-    width: 44px;
-    height: 34px;
-    background: transparent 50% 50% no-repeat url('../img/toggle.png');
-    border: 1px solid #fff;
+    width: 80px;
+    height: 80px;
+    //border: 1px solid #fff;
     margin: 0;
-    padding: 0;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
     cursor: pointer;
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 49%;
+    right: 5px;
+    transform: translate(0, -50%);
+    .sm(display, block);
+}
+
+.ham {
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    transition: transform 400ms;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.hamRotate.active {
+    transform: rotate(45deg);
+}
+.line {
+    fill:none;
+    transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+    stroke:#fff;
+    stroke-width:5.5;
+    stroke-linecap:round;
+}
+.ham7 .top {
+    stroke-dasharray: 40 82;
+}
+.ham7 .middle {
+stroke-dasharray: 40 111;
+}
+.ham7 .bottom {
+stroke-dasharray: 40 161;
+}
+.ham7.active .top {
+stroke-dasharray: 17 82;
+stroke-dashoffset: -62px;
+}
+.ham7.active .middle {
+stroke-dashoffset: 23px;
+}
+.ham7.active .bottom {
+stroke-dashoffset: -83px;
 }
