--- a/src/css/sections/prize.less
+++ b/src/css/sections/prize.less
@@ -7,9 +7,15 @@
         &:extend(.title-2);
         color: @coor_blue;
         margin-bottom: 45px;
+        
+        .sm-block({
+            font-size: 24px;
+            line-height: 1;
+        });
         & span {
             display: block;
             font-size: 80px;
+            .sm(font-size, 32px);
         }
     }
 }
@@ -22,18 +28,42 @@
 .priseItem {
     &:extend(.sg-col);
     .size(4);
+    .size-md(12);
     font-size: 24px;
+    .md-block({
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 51px;
+        text-align: center;
+    });
 
     &__img {
-        margin-bottom: 43px;
+        margin-bottom: 40px;
+        .md-block({
+            display: flex;
+            align-items: center;
+        });
+    }
+
+    &__img img {
+        .md(margin-right, 20px);
     }
 
     &__img--small {
-        padding-top: 26px;
+        padding-top: 30px;
+        margin-bottom: 32px;
     }
 
     &__img--last {
         padding-top: 19px;
+        margin-bottom: 45px;
+    }
+
+    &__x {
+        font-size: 90px;
+        font-weight: bold;
+        color: @color_red;
     }
 
     &__desc {
@@ -47,6 +77,12 @@
         text-transform: uppercase;
         color: @color_red;
         margin-bottom: 40px;
+
+        &--mdc {
+            .md-block({
+                margin: 0 auto 40px;
+            });
+        }
     }
 
     &__text {
@@ -56,4 +92,9 @@
     &__text--small {
         width: 165px;
     }
+}
+
+.priseItem__desc--md .priseItem__title,
+.priseItem__desc--md .priseItem__text {
+    .md(width, 275px);
 }
