--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -95,6 +95,10 @@ body {
     text-transform: uppercase;
     color: @color_white;
     margin-bottom: 70px;
+    .sm-block({
+        font-size: 32px;
+        line-height: 45px;
+    });
 }
 
 .title-3 {
@@ -135,6 +139,32 @@ a {
         color: @color_yellow;
         background: @coor_blue;
     }
+}
+
+::-webkit-scrollbar {
+    width: 25px;
+    border-radius: 50%;
+}
+
+::-webkit-scrollbar-thumb {
+    width: 3px;
+    border-radius: 10px;
+    background-color: @coor_blue;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    width: 20px;
+    background-color: #fff;
+    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);
+    box-shadow: inset 0 0 2px rgba(0,0,0,0.2);
+}
+
+::-webkit-scrollbar-corner {
+    border-radius: 50%;
 }
 
 
