--- a/src/css/sections/feedback.less
+++ b/src/css/sections/feedback.less
@@ -13,6 +13,7 @@
         width: 885px;
         font-size: 24px;
         margin: 0 auto;
+        .md(width, 100%);
     }
 
     &__select-wrapper {
@@ -113,5 +114,6 @@
 
     &__btn {
         width: 340px;
+        .xxs(width, 280px);
     }
 }
