--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -141,13 +141,17 @@ a {
     }
 }
 
-::-webkit-scrollbar {
+.winRegister__over::-webkit-scrollbar,
+.lkChecks__over::-webkit-scrollbar,
+.lkCash__over::-webkit-scrollbar {
     width: 25px;
     border-radius: 50%;
 }
 
-::-webkit-scrollbar-thumb {
-    width: 3px;
+.winRegister__over::-webkit-scrollbar-thumb,
+.lkChecks__over::-webkit-scrollbar-thumb,
+.lkCash__over::-webkit-scrollbar-thumb {
+    width: 13px;
     border-radius: 10px;
     background-color: @coor_blue;
     -webkit-border-radius: 10px;
@@ -156,15 +160,13 @@ a {
     -o-border-radius: 10px;
 }
 
-::-webkit-scrollbar-track {
+.winRegister__over::-webkit-scrollbar-track,
+.lkChecks__over::-webkit-scrollbar-track,
+.lkCash__over::-webkit-scrollbar-track {
     width: 20px;
     background-color: #fff;
     -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.2);
     box-shadow: inset 0 0 2px rgba(0,0,0,0.2);
-}
-
-::-webkit-scrollbar-corner {
-    border-radius: 50%;
 }
 
 
