--- a/src/css/sections/modal.less
+++ b/src/css/sections/modal.less
@@ -5,6 +5,10 @@
     position: relative;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
     text-align: center;
+    .xs-block({
+        padding-left: 21px;
+        padding-right: 21px; 
+    });
 
     &-reg,
     &-qr-code {
@@ -47,6 +51,7 @@
         height: 50px;
         text-align: center;
         margin-bottom: 28px;
+        .sm(width, 100%);
 
         &::placeholder {
             font-size: 18px;
@@ -55,7 +60,7 @@
     }
 
     &__link {
-        height: 51px;
+        min-height: 51px;
         font-size: 24px;
         font-weight: 800;
         line-height: 48px;
@@ -64,6 +69,12 @@
         color: #fff;
         background: @coor_blue;
         border: 2px solid @coor_blue;
+        .xs-block({
+            line-height: 1.2;
+            padding-top: 9px;
+            padding-bottom: 9px;
+        });
+
     
         &:hover {
             color: @coor_blue;
@@ -72,6 +83,7 @@
 
         &--all {
             width: 340px;
+            .xs(width, 100%);
         }
     }
 
@@ -85,6 +97,11 @@
         text-transform: uppercase;
         color: @color_red;
         margin-bottom: 30px;
+        .xs(font-size, 28px);
+
+        &--error {
+            .xxs(font-size, 21px);
+        }
     }
     &__subtitle {
         font-size: 18px;
@@ -120,6 +137,12 @@
     line-height: 49px;
     border: 1px solid #000;
 }
+.modal__select-name {
+    .xxs-block({
+        font-size: 14px;
+        padding-left: 14px;
+    });
+}
 
 .modal__select-name,
 .modal__select-num {
@@ -142,10 +165,11 @@
 
 .modal__over-name {
     width: 79.5%;
+    .sm(width, 100%);
 }
 
 .modal__over-num {
-    width: 15.9%;
+    width: 90px;
 }
 
 .modal__name-arrow,
@@ -221,9 +245,11 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        .sm(width, 100%);
     }
     &__img {
         width: 90px;
+        .sm(display, none);
     }
     &__input input {
         display: none;
@@ -233,6 +259,7 @@
         align-items: center;
         height: 75px;
         border: 1px solid #000;
+        .xs(justify-content, center);
     }
     &__icon {
         width: 90px;
@@ -240,6 +267,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        .xs(display, none);
     }
     &__text {
         width: 225px;
